完成登录功能

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -2,3 +2,10 @@
   margin: 0;
   padding: 0;
 }
+//设置navbar的公用央视
+.van-nav-bar {
+  background-color: #3196fa;
+  .van-nav-bar__title {
+    color: #fff;
+  }
+}
